# ESP32S3_LVGL_GC9A01

./: README.md  sdkconfig
components/lvgl_gc9a01/: CMakeLists.txt  Kconfig.projbuild  gc9a01.c  lvgl_gc9a01.c  ui_helpers.c
components/lvgl_gc9a01/include/: gc9a01.h  lvgl_gc9a01.h
main/: hello_world_main.c
