idf_component_register(SRCS "lvgl_gc9a01.c" "lvgl_demo_ui.c" "gc9a01.c" "ui_img_patern3_png.c"
			"display.c" "ui_helpers.c" "ui_font_wise60.c" "lv_font_montserrat_20.c" "ui_img_1321029331.c" "sntp.c"
                    INCLUDE_DIRS "include"
                    PRIV_REQUIRES esp_lcd lvgl_gc9a01)
